Location data updated.

--- a/news_scraper_sandbox.ipynb
+++ b/news_scraper_sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -104,6 +104,146 @@
    "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latest Coronavirus Impacts: California to Expand Eligibility for Vaccinations\n",
+      "Families and Fans Can Start Buying Tix for Legoland\n",
+      "California to Open Vaccinations to Everyone 16 and Older Starting April 15\n",
+      "San Diego Councilman: City Seal's Glorification of Spanish Past No Longer Relevant\n",
+      "That Vaccinated Feeling: San Diegans React to Getting Their Second Dose\n",
+      "Oceanside Mother Pleads Not Guilty in Newborn's Death, Restraining Order Alleges History of Violence\n",
+      "A New Version of an Old Scam Targets Grandparents\n",
+      "‘Exposure': Documentary Highlights How Pandemic ‘Changed the Face of Nursing'\n",
+      "Family to Launch Fund to Build Pedestrian Bridge at San Diego River Crossing Commemorating Death of Son\n",
+      "Darvish Gets Opening Day Start for Padres\n",
+      "San Diego ‘Vaccine Angels' Help Neighbors Find Vaccine Appointments\n",
+      "Amazon Settles Lawsuit With San Diego, Other DAs Over Price Listings\n",
+      "Third Person Arrested in Killing of Teen at Sunset View Park in Chula Vista\n",
+      "FEMA Urging Applicants to Prepare Documents for COVID-19 Funeral Assistance\n",
+      "Carlsbad Unified Middle and High School Students to Return to Class 5 Days a Week\n",
+      "Lifeguards, Police to Step Up Boating Enforcement For Spring Break\n",
+      "San Diego Public Utilities Department Proposes Sewer, Water Rate Hike in 2022\n",
+      "Biden Vows Action on Migrants as He Defends Border Policy\n",
+      "Soaring to Success: Injured Barn Owl Found in Coronado Rescued and Released Back Into Wild\n",
+      "U.C. San Diego Emerges as National Fencing Power\n",
+      "Escondido Police Arrest Girl, 13, Accused of Killing 2 After Fleeing Police in SUV\n",
+      "Roll-Up Doors and Timers: Chula Vista's New $9M Fire Station Aims to Improve Emergency Response Times\n",
+      "LISTEN: On Friar Podcast – Pitching Ninja on Darvish and the Padres' Filthy Rotation\n",
+      "San Diego's Homebound Seniors Still Waiting for COVID-19 Vaccine Doses\n",
+      "Food at Petco Park for 2021 San Diego Padres Games: What's Changed in This Pandemic-Era Baseball Season\n",
+      "Oceanside Mother Charged With Murder 4 Months After Newborn's Death\n",
+      "Mystery Drones Hovered Over Navy Destroyers Off California, Report Says\n",
+      "Ashley Tisdale Gives Birth, Welcomes First Baby With Christopher French\n",
+      "Torch Relay for Tokyo Olympics Kicks Off Its 121-Day Journey\n",
+      "Chrissy Teigen Deletes Twitter After Feeling ‘Deeply Bruised' by Negativity\n",
+      "Protest Held Outside SDUSD Headquarters Against Superintendent's White House Nomination\n",
+      "San Diego's Weather: Thursday Showers and Gusty Winds\n",
+      "Beauty and Bargain Retail Could Be the Biggest Winners in 2021, Wells Fargo Predicts\n",
+      "2021 Anza-Borrego Desert Bloom: Perennials to Shine, Annuals Might ‘Surprise' in Potentially Extended Season\n",
+      "COVID Questions: Experts Answer Pressing Questions During Fleet Science Center Seminar\n",
+      "Professor Reacts to WAPO Article Dismissing Claims of Migrant Surge at Border\n",
+      "Britney Spears Officially Requests Jodi Montgomery as Her Permanent Conservator\n",
+      "Brazil COVID-19 Variant P.1 Detected in San Diego County for 1st Time\n",
+      "Vista Unified Gives Students Choice to Go Back to School Full Time\n",
+      "‘Glee' Cast to Reunite as Part of Annual GLAAD Media Awards\n",
+      "Tatis Feeling Good, Expected to Return Soon From Shoulder Injury\n",
+      "Vaccine Whisperer: Hunting Down Appointments One at a Time\n",
+      "3 Pathways to the Orange Tier: San Diego Leaders Outline Next Steps\n",
+      "State Program Will Lead to SDG&E Bill Reductions This Spring and Summer\n",
+      "Unemployment Benefits Fraud Could Cost $300 Billion Nationwide\n",
+      "Vista Unified School District OKs Full-Time, In-Person Learning in April\n",
+      "San Diegan Creates Twitter Bot to Help Find Open Vaccine Appointments\n",
+      "San Diego Mexican Consulate Hopeful New Vaccine Site Curbs Vaccine Hesitancy Among Latinos\n",
+      "San Diego County Republicans Weigh in on Trump's Future in the Party\n",
+      "Zoom CFO Explains How the Company's Employees Avoid Work-From-Home Fatigue\n",
+      "Hit-and-Run Suspect, 19, Was Doing ‘Double' the Speed Limit When She Killed Pedestrian in El Cajon: Police\n",
+      "‘Sesame Street' Adds 2 Black Muppets To Talk Clearly About Race and Racism\n",
+      "County Leaders Announce Resolution to Stand With Asian Americans, Pacific Islanders Against Hate\n",
+      "SoCal Beach Volleyball Star April Ross Preps For 3rd Olympics\n",
+      "FAQ: What to Know About the Effort to Recall California Gov. Gavin Newsom\n",
+      "New Coronavirus Vaccination Site Opens at Mexican Consulate in San Diego\n",
+      "‘He Made It': COVID-19 Patient Leaves Scripps Memorial Hospital After 6 Months on Life Support\n",
+      "SoCal Nonprofit Now Accepting Mother's Day Gifts to Give to Female Veterans\n",
+      "Conrad Prebys Foundation Announces Nearly $78 Million in Grants. Here's a List of Recipients\n",
+      "Port of San Diego Seeks Input On Maritime Clean Air Strategy Discussion Draft\n",
+      "Fleet Science Center Hosts Virtual Vaccine Panel\n",
+      "City Heights Prayer Vigil Honors Victims of Atlanta Spa Killings\n",
+      "The Check Is NOT in the Mail: Postal Worker Sentenced for Stealing\n",
+      "Colonel Relieved of Command Following Investigation Into Deadly AAV Training Incident\n",
+      "Travel California's Intercity Passenger Rails From Home\n",
+      "Joanna Gaines Reflects on Korean Heritage Amid Surge in Anti-Asian Hate Incidents\n",
+      "Point Loma High School Cancels 2021 Football Season After 1 Game\n",
+      "Migrant Children Could Arrive at San Diego Convention Center As Soon As This Weekend, Officials Say\n",
+      "Veteran Actor George Segal Dies at 87\n",
+      "Politics of the Red Tier: Some Say Reopenings Not Fast Enough\n",
+      "March Madness: Viejas Arena Opens as County's Newest Vaccination Site\n",
+      "City, County Agree to Use San Diego Convention Center to House Children Seeking Asylum\n",
+      "Man, 30, Jailed in 2020 Slaying of Boy, 15, at Chicano Park\n",
+      "Teen, University of San Diego Student Killed in Head-On Crash Remembered\n",
+      "Driver Accused of Being Behind the Wheel in San Diego's Deadly Downtown Crash Pleads Not Guilty\n",
+      "With Infinium Spirits Moving South, Skrewball Whiskey Comes Home\n",
+      "Small Risk Still Exists To Catch COVID-19 After Vaccines, UCSD, UCLA Find\n",
+      "Not Ready to Reopen: Restaurant Chooses to Remain in Purple Tier\n",
+      "COVID-19 Vaccine Site Opens To the Public at Viejas Arena\n",
+      "Homeless Individuals to Be Relocated From San Diego Convention Center to Other Shelters\n",
+      "San Diego's Weather: Springtime Sprinkles, Mountain Breezes\n",
+      "Medical Examiner Identifies 2 Men Killed in Downtown San Diego Tunnel Crash, Seeks Help Locating Their Families\n",
+      "Get to Know the Wildflowers Among the Redwoods\n",
+      "Things to Do in Spring 2021 in San Diego, Pandemic-Style\n",
+      "Man Sentenced to 196 Years as Teen And Released After Law Change Accused in Violent Robbery\n",
+      "Former SWAT Commander Gives Perspective on Active Shooter Response\n",
+      "About 40 False Killer Whales Spotted Along California Coast\n",
+      "This Company Will Pay You $2,400 to Go on a ‘Digital Detox'\n",
+      "A Look Back On The Community Of Chula Vista One Year Since Start of Pandemic\n",
+      "Some San Diego County Students Could Return for In-Person Instruction Sooner Than Expected\n",
+      "Little George's Bakery Closes After Beloved Owner Dies From COVID-19 Complications\n",
+      "San Diego Father Struck by Hit-and-Run Driver Out of Coma and Talking\n",
+      "Encinitas Woman Finds Way to Thank Health Care Workers and Help Local Restaurants\n",
+      "Share Your Photos for National Puppy Day, San Diego!\n",
+      "LISTEN: On Friar – Getting Knocks with Craig Stammen\n",
+      "Reward Offered for Info in Fatal 2016 Shooting: Oceanside Police\n",
+      "Motorist, 17, Killed in Head-On Crash, Three With Life-Threatening Injuries\n",
+      "Portia De Rossi Recovering After Being Hospitalized for Surgery\n",
+      "Royal Family Considering Someone To Spearhead Diversity After Harry and Meghan Interview\n",
+      "WATCH: Final Piece of San Diego Stadium Torn Down\n",
+      "Rep. Issa on San Diego Convention Center to hold asylum-seeking unaccompanied minors\n",
+      "SANDAG, NCTD get $10.5 million grant from state to reinforce Del Mar bluffs\n",
+      "Amazon settles lawsuit with San Diego, other DAs over price listings\n",
+      "Documentary on living as a nurse during COVID-19\n",
+      "Poll: Parents remain concerned about safety as in-person learning resumes\n",
+      "San Diego Public Utilities Department proposes sewer, water rate hike in 2022\n",
+      "California to vaccinate anyone 16 and older in mid April\n",
+      "Reopening farmer's markets under less restrictive red tier\n",
+      "Why Passover is important to the Jewish community\n",
+      "Vista Unified School District votes to return to class five days a week\n",
+      "Zahau attorney says lawsuit could expose corruption\n",
+      "Homeless residents to be relocated from Convention Center\n",
+      "Middle school student dries fruit to raise money for families most affected by COVID-19\n",
+      "County health leaders look to the future of the orange tier as vaccinations continue\n",
+      "Oceanside woman arrested for allegedly murdering her newborn child\n",
+      "Two cases of COVID-19 Brazilian variant found in San Diego County\n",
+      "County leaders promise action against Anti-Asian/Pacific Islander Hate\n",
+      "State program will lead to SDG&E; bill reductions this spring and summer\n",
+      "Councilmember Lacava aims to change City of San Diego seal to something more culturally sensitive\n",
+      "One Year Anniversary of Helen Woodward Animal Center's AniMeals Relief\n",
+      "Jamul man plans theme park in San Diego County\n",
+      "Authorities identify two people killed in head-on crash in Linda Vista\n",
+      "'It's a buyers, and a seller's market,' says real estate team owner\n",
+      "San Diego County extends vaccination to those who are overweight\n",
+      "Unaccompanied migrant children seeking asylum will be housed in San Diego Convention Center\n",
+      "Man carries toddler into San Diego Zoo's elephant habitat\n",
+      "AleSmith Brewing non-profit celebrates one year with fundraiser for youth\n",
+      "Girl Scouts Operation Thin Mint celebrates 20 years\n",
+      "Bowlegged BBQ brings East Texas culture and style to San Diego\n",
+      "Gun Owners of America organization fights to defend the Second Amendment\n",
+      "Former WI Gov. Scott Walker and Young America's Foundation launch \"The Long Game\"\n",
+      "Girls Volleyball: Cathedral Catholic 3, Point Loma 0\n",
+      "Girls Volleyball: Torrey Pines 3, Sage Creek 0\n",
+      "Boys Basketball: Coronado 72, Scripps Ranch 61\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -137,156 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>source</th>\n",
-       "      <th>day</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alabama adds 754 confirmed coronavirus casesTh...</td>\n",
-       "      <td>al.com</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2020-09-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Whitmire: LGBTQ charter school rejection is un...</td>\n",
-       "      <td>al.com</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2020-09-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Trump to announce Supreme Court pick on Friday...</td>\n",
-       "      <td>al.com</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2020-09-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Alabama reserve cornerback suffers arm injuryH...</td>\n",
-       "      <td>al.com</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2020-09-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The 2020 Alabama football depth chart3h</td>\n",
-       "      <td>al.com</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2020-09-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12065</th>\n",
-       "      <td>Army changes new fitness exam, kicks out requi...</td>\n",
-       "      <td>https://www.king5.com/</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2021-03-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12066</th>\n",
-       "      <td>Children's picture book on Dr. Anthony Fauci s...</td>\n",
-       "      <td>https://www.king5.com/</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2021-03-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12067</th>\n",
-       "      <td>Elgin Baylor, silky-smooth Lakers Hall of Fame...</td>\n",
-       "      <td>https://www.king5.com/</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2021-03-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12068</th>\n",
-       "      <td>March Madness upsets tracker: No. 7 Oregon ups...</td>\n",
-       "      <td>https://www.king5.com/</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2021-03-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12069</th>\n",
-       "      <td>IRS: Next batch of stimulus payments coming th...</td>\n",
-       "      <td>https://www.king5.com/</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>2021-03-22</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12070 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   title  \\\n",
-       "0      Alabama adds 754 confirmed coronavirus casesTh...   \n",
-       "1      Whitmire: LGBTQ charter school rejection is un...   \n",
-       "2      Trump to announce Supreme Court pick on Friday...   \n",
-       "3      Alabama reserve cornerback suffers arm injuryH...   \n",
-       "4                The 2020 Alabama football depth chart3h   \n",
-       "...                                                  ...   \n",
-       "12065  Army changes new fitness exam, kicks out requi...   \n",
-       "12066  Children's picture book on Dr. Anthony Fauci s...   \n",
-       "12067  Elgin Baylor, silky-smooth Lakers Hall of Fame...   \n",
-       "12068  March Madness upsets tracker: No. 7 Oregon ups...   \n",
-       "12069  IRS: Next batch of stimulus payments coming th...   \n",
-       "\n",
-       "                       source     day        date  \n",
-       "0                      al.com  Monday  2020-09-21  \n",
-       "1                      al.com  Monday  2020-09-21  \n",
-       "2                      al.com  Monday  2020-09-21  \n",
-       "3                      al.com  Monday  2020-09-21  \n",
-       "4                      al.com  Monday  2020-09-21  \n",
-       "...                       ...     ...         ...  \n",
-       "12065  https://www.king5.com/  Monday  2021-03-22  \n",
-       "12066  https://www.king5.com/  Monday  2021-03-22  \n",
-       "12067  https://www.king5.com/  Monday  2021-03-22  \n",
-       "12068  https://www.king5.com/  Monday  2021-03-22  \n",
-       "12069  https://www.king5.com/  Monday  2021-03-22  \n",
-       "\n",
-       "[12070 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.DataFrame(db, columns=['title', 'source', 'day', 'date'])"
+    "data = pd.DataFrame(db, columns=['title', 'source', 'day', 'date', 'state'])"
    ]
   },
   {
